# cps844

./: README.md  linear_regression.py  nonlinear_regression.py  perceptron.py  pyproject.toml
